tests/neg/namespace-redefintion2/test.stk
namespace test.lib // error

type A = Int

type List[T] = #Nil | #Cons(head: T, tail: List[T])

def double(n: A): A = n + n
